# iron_hide_oficial

./: CMakeLists.txt  README.md  a2.py  package.xml
src/arduino/: main.ino  main_comunication.py
src/arduino/comunicação_antiga/: comunicacao.cpp  comunicacao.hpp  comunicacao_rafael.py  posicao.cpp  posicao.hpp  rodas.cpp  rodas.hpp
src/arduino/comunicação_antiga/embarcados/: embarcados.ino
src/arduino/main/: main.ino
src/arduino/testes/: teste.ino  teste.py
src/arduino/testes/teste/: teste.ino
src/motion/: CMakeLists.txt  package.xml
src/motion/src/config/: robots_params.yaml
src/motion/src/launch/: mission.launch  teleop.launch
src/motion/src/scripts/: Navigator_class.py  mission.py  teleop (copy).py
src/odometry/: CMakeLists.txt  package.xml
src/odometry/src/robot_pose_ekf/launch/: robot_pose_ekf.launch
src/scripts/: green_corner_tracker_ROS.py
src/sources/: Aestrelapub.cpp  main.cpp
src/testes/ROS/: publisher.py
